--- a/minesweeper.html
+++ b/minesweeper.html
@@ -59,7 +59,7 @@
                 gameBox.innerHTML=gameBox.innerHTML+"<div class='rows' id='row-"+i+"'></div>";
                 while (j<10){
                     gameRow=document.getElementById('row-'+i);
-                    gameRow.innerHTML=gameRow.innerHTML+"<span class='boxes' id='"+c+"' onclick='return leftClicked(id)' oncontextmenu='return rightClicked(id)'><img src='default.png' alt='' srcset=''></span>";
+                    gameRow.innerHTML=gameRow.innerHTML+"<span class='boxes' id='"+c+"' onclick='return leftClicked(id)' oncontextmenu='return rightClicked(id)'><img src='/default.png' alt='' srcset=''></span>";
                     j=j+1;
                     c=c+1;
                 }
